Fix: window jumps when opening fancybox modal

--- a/src/styles/base/!vendor.scss
+++ b/src/styles/base/!vendor.scss
@@ -108,6 +108,10 @@
             height: 100%;
         }
     }
+
+    &-active {
+        height: inherit;
+    }
 }
 
 /* Swiper */
